# OpenDB

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  documentation.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  docs-deploy.yml  publish.yml
benches/: benchmark.rs
docs/: book.toml
docs/src/: SUMMARY.md  contributing.md  installation.md  introduction.md  quickstart.md
docs/src/advanced/: extending.md  performance.md
docs/src/api/: graph.md  kv.md  multimodal.md  records.md  transactions.md  vector.md
docs/src/architecture/: caching.md  overview.md  storage.md  transactions.md
examples/: custom_storage.rs  database_structure.rs  graph_relations.rs  memory_agent.rs  multimodal_agent.rs  quickstart.rs
src/: database.rs  error.rs  lib.rs  types.rs
src/cache/: lru_cache.rs  mod.rs
src/codec/: mod.rs
src/graph/: mod.rs  relation.rs
src/kv/: mod.rs
src/records/: mod.rs
src/storage/: column_families.rs  mod.rs  rocksdb_backend.rs
src/transaction/: manager.rs  mod.rs
src/vector/: hnsw_index.rs  mod.rs
tests/: acid_test.rs  integration_test.rs
